# cod2map

./: CHANGELOG.md  CMakeLists.txt  README.md  build.bat  cod2map.js  cod2map.wasm  index.html  runner.worker.js  style.css
.github/workflows/: build.yml
cod2src/: aabbtree.c  brush.c  bsp.c  cod2map.h  collision.c  facebsp.c  leakfile.c  lightmaps.c  map.c  materials.c  mesh.c  patch.c  platform_compat.c  platform_compat.h  portals.c  shadows.c  shadows_midpoint.c  surface.c  threads.c  tree.c  tris.c  tris_coalesce.c  tris_gridtree.c  tris_mergeconcave.c  tris_mergeverts.c  tris_tesselate.c  tris_tjunc.c  vis.c  win_shared.c  writebsp.c
cod2src/asm/: x87_trig.asm  x87_trig_x86.asm
cod2src/common/: bspfile.c  polylib.c  targetplatform.c  texturevecs.c
cod2src/libs/: cmdlib.c
cod2src/libs/minizip/: ints.h  ioapi.c  unzip.c  unzip.h
cod2src/universal/: assertive.c  com_files.c  com_math.c  com_memory.c  com_shared.c  dvar.c  q_parse.c  q_shared.c  tangentspace.c
web/: app.js  index.html  runner.worker.js  style.css
